@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.alibaba.csp</groupId>
         <artifactId>sentinel-adapter</artifactId>
-        <version>2.0.0.B</version>
+        <version>2.0.1.B</version>
     </parent>
 
     <artifactId>sentinel-jax-rs-adapter</artifactId>
@@ -14,7 +14,7 @@
 
     <properties>
         <javax.ws.rs-api.version>2.1.1</javax.ws.rs-api.version>
-        <spring.boot.version>2.7.6</spring.boot.version>
+        <spring.boot.version>3.0.1</spring.boot.version>
     </properties>
 
     <dependencies>
@@ -81,6 +81,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
+                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.util.concurrent=ALL-UNNAMED --add-opens java.base/java.io=ALL-UNNAMED</argLine>
                     <forkMode>always</forkMode>
                 </configuration>
             </plugin>
